{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "cb77c5a5-782e-41d5-9b3c-ec800cdb838f",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "7ff7c2f0-35f0-43cd-bddc-a8c259039da6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "6e04b50c-195f-4d5f-81b9-eed26bf2e1c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "ae53b4e1-be43-4a35-a0f3-646acb646937",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8220c7bf-055a-4748-84f6-01f88524bfef",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9efc74ff-2700-4c1f-8eef-b11a43456cb7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "042c0c9a-15cf-4db4-a7a4-957de0daa689",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}